<resources>
    <string name="app_name">ODDJOB</string>
    <string name="title_activity_search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    //Login
    <string name="username_login">username</string>
    <string name="password_login">password</string>
    //Terms and conditions
    <string name="terms_conditions">Terms and Conditions</string>
    //Register
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="address_line2">Address (Line 2)</string>
    <string name="postal">Postal/Zip Code</string>
    <string name="password">Password</string>
    //Type
    <string name="student">Student</string>
    <string name="neighbour">Neighbour</string>
    //Profile
    <string name="name">Name</string>
    <string name="school">School</string>
    <string name="neighbourhood">Garrison</string>
    <string name="bio">Write a little bit about yourself here!</string>
    <string name="button">Button</string>
    <string name="title_add">Add Job</string>
    <string name="title_profile">Profile</string>
    <string name="title_messages">Messages</string>
    <string name="title_search">Search</string>
    <string name="google_maps_key">AIzaSyCF85KsLylcsfo6wFiMNhE1ewZjImmU0h0 </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_search_jobs">SearchJobsActivity</string>
    <string name="scrolling_text">hello</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="jobCategoryPrompt">Select a Category: </string>
    <string name="timeSpinnerPrompt">Select AM/PM</string>

    <string-array name="fragmentList">
        <item>y</item>
        <item>o</item>
        <item>u</item>
    </string-array>

    <string-array name="jobTypes">
        <item>Select a Job Category</item>
        <item>Yardwork</item>
        <item>Indoor Cleaning</item>
        <item>Outdoor Cleaning</item>
        <item>Tutoring</item>
        <item>Pet Care</item>
        <item>Child Care</item>
        <item>Other</item>
    </string-array>

    <string-array name="timeSpinnerArray">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
