<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />
        <Button
            android:id="@+id/edit_button"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:hint="Edit Profile Image" />
        <TextView
            android:id="@+id/Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
        <TextView
            android:id="@+id/School"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/school"/>
        <TextView
            android:id="@+id/Grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Grade"/>
        <TextView
            android:id="@+id/Age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Age"/>
        <TextView
            android:id="@+id/Bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/bio"/>
        <Button
            android:id="@+id/submit_button"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:text="SAVE" />

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />
</android.support.constraint.ConstraintLayout>
